@startuml src
' 主要部分
interface AnalyzerInterface
interface DataUnitInterface
interface DataGroupInterface

class AnalyzerInterface implements Analyzer
class DataUnitInterface implements DataUnit
class DataGroupInterface implements DataGroup

' DataUnitFactory
interface DataUnitFactoryInterface
abstract BaseDataUnitFactory implements DataUnitFactoryInterface
class DefaultDataUnitFactory extends BaseDataUnitFactory
class WavDataUnitFactory extends BaseDataUnitFactory

' DataGroupFactory
interface DataGroupFactoryInterface
class DefaultDataGroupFactory implements DataGroupFactoryInterface

' DataRepository
interface DataRepositoryInterface
abstract BaseDataRepository implements DataRepositoryInterface
class CSVDataRepository extends BaseDataRepository
class WAVDataRepository extends BaseDataRepository

' Executer
interface ExecutorInterface
class FuncExecutor implements ExecutorInterface
class CrossExecutor implements ExecutorInterface

' デザイン間
DataUnitInterface --o DataGroup
DataGroupInterface --o Analyzer
DataUnitFactoryInterface --o DataGroupFactory
DataGroupFactoryInterface --o Analyzer
ExecutorInterface --o Analyzer
@enduml